c4prj1_deck/grade.txt
Grading at Wed Jul 29 15:08:54 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:61:37: error: ‘deck’ undeclared (first use in this function)
    excl->cards=realloc(excl->cards,(deck->n_cards+1)*sizeof(*excl->cards));
                                     ^
deck.c:61:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
